refactor functions to get alarm state from stack resource
