# cli/src/pcluster/api/openapi/openapi.yaml
@@ -2572,6 +2572,21 @@ components:
       - version
       title: DescribeImageResponseContent
       type: object
+    Detail:
+      example:
+        alarmType: alarmType
+        alarmState: alarmState
+      properties:
+        alarmType:
+          description: The alarm type when the verbose flag is set to true.
+          title: alarmType
+          type: string
+        alarmState:
+          description: The alarm state when the verbose flag is set to true.
+          title: alarmState
+          type: string
+      title: Detail
+      type: object
     DryrunOperationExceptionResponseContent:
       description: Communicates that the operation would have succeeded without the
         dryrun flag.
