# cli/src/pcluster/models/cluster_resources.py
@@ -19,7 +19,12 @@ import boto3
 from pcluster.aws.aws_api import AWSApi
 from pcluster.aws.aws_resources import InstanceInfo, StackInfo
 from pcluster.constants import CW_LOGS_CFN_PARAM_NAME, OS_MAPPING, PCLUSTER_NODE_TYPE_TAG, PCLUSTER_VERSION_TAG
-from pcluster.models.common import FiltersParserError, LogGroupTimeFiltersParser, get_all_stack_events
+from pcluster.models.common import (
+    FiltersParserError,
+    LogGroupTimeFiltersParser,
+    describe_stack_resources,
+    get_all_stack_events,
+)
 
 
 class ClusterStack(StackInfo):
@@ -186,17 +191,24 @@ class ClusterStack(StackInfo):
         return failure.failure_code, failure.api_failure_reason
 
     def _get_alarm_names(self):
-        stack_events = list(itertools.chain.from_iterable(get_all_stack_events(self.name)))
+        stack_resources = describe_stack_resources(self.name)
         alarm_names = []
-        # loop through events to get
-        for event in stack_events:
-            if event.get("ResourceType") == "AWS::CloudWatch::Alarm":
-                alarm_names.append(event['PhysicalResourceId'])
+        for resource in stack_resources.values():
+            if resource.get("ResourceType") == "AWS::CloudWatch::Alarm":
+                alarm_name = resource.get("PhysicalResourceId")
+                if alarm_name:
+                    alarm_names.append(alarm_name)
         return alarm_names
 
     def get_alarms_in_alarm(self):
+        @dataclass
+        class Detail:
+            alarm_type: str
+            alarm_state: str
+
         cw = boto3.client("cloudwatch", region_name="us-east-2")
         alarm_names = self._get_alarm_names()
+        print(alarm_names)
         alarms_in_alarm = []
         for name in alarm_names:
             # Get the details of the alarm
@@ -204,15 +216,14 @@ class ClusterStack(StackInfo):
             response = cw.describe_alarms(AlarmNames=[name])
 
             # If the alarm is in 'ALARM' state, add it to the list
-            for alarm in response['MetricAlarms']:
-                if alarm['StateValue'] == 'ALARM':
-                    alarms_in_alarm.append(alarm)
-                # there is no alarm
-                #
-        return alarms_in_alarm
-
-    # def get alarms
-    # BOTO3 describe-stack-resources
+            for alarm in response["MetricAlarms"]:
+                if alarm["StateValue"] == "ALARM":
+                    # append Detail object
+                    alarms_in_alarm.append(Detail(alarm_type=alarm["AlarmName"], alarm_state=alarm["StateValue"]))
+            if not alarms_in_alarm:
+                return "No alarms in 'ALARM' state."
+            else:
+                return alarms_in_alarm
 
 
 class ClusterInstance(InstanceInfo):
@@ -302,12 +313,12 @@ class ExportClusterLogsFiltersParser(ClusterLogsFiltersParser):
     """Class to manage export cluster logs filters."""
 
     def __init__(
-            self,
-            head_node: ClusterInstance,
-            log_group_name: str,
-            start_time: datetime.datetime = None,
-            end_time: datetime.datetime = None,
-            filters: List[str] = None,
+        self,
+        head_node: ClusterInstance,
+        log_group_name: str,
+        start_time: datetime.datetime = None,
+        end_time: datetime.datetime = None,
+        filters: List[str] = None,
     ):
         super().__init__(head_node, filters)
         self.time_parser = LogGroupTimeFiltersParser(log_group_name, start_time, end_time)
